# cognee

./: .python-version  Dockerfile  README.md  pyproject.toml
cognee/api/v1/search/routers/: get_search_router.py
cognee/infrastructure/databases/vector/embeddings/: FastembedEmbeddingEngine.py  LiteLLMEmbeddingEngine.py  get_embedding_engine.py
cognee/infrastructure/llm/: config.py
cognee/modules/data/chunking/: chunk_by_word.py
cognee/modules/users/authentication/: get_auth_backend.py
